tests/snapshots/examples_fixtures/suggestions__scoped_variables.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/suggestions/scoped_variables.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E400]: MISSING EFFECT

Call to `print` requires effect `IO` in this function signature.

  --> examples/suggestions/scoped_variables.flx:11:5
   |
11 |     print(localCoun);
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.
== stdout ==
<not executed>
